--- a/HTML/css/styles2.css
+++ b/HTML/css/styles2.css
@@ -91,5 +91,12 @@ p {
     margin: 1rem;
 }
 .bachs-one {
-    /* align-self: flex-start; */
+    /* align-self: flex-start; */ 
+}
+.contayner {
+    display: grid;
+    /* 3 x 2 */
+    grid-template-rows: 100px 100px 100px;
+    grid-template-columns: 100px 100px;
+    border: 3px solid lightgrey;
 }
