--- a/HTML/css/forms.css
+++ b/HTML/css/forms.css
@@ -2,6 +2,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.5;
+  padding: 1rem;
 }
 label {
     display: block;
@@ -23,6 +24,9 @@ button {
     background: #0d6efd;
     color: #fff;
     border: 0;
+    padding: 0.5rem 0.7rem;
+    border-radius: 5px;
+    outline: 0;
 }
 .form-group {
     margin-bottom: 1rem;
